--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "test",
-    "start": "electron ."
+    "start": "electron . --no-sandbox"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "url": "https://github.com/suda-BOD/soda/issues"
   },
   "homepage": "https://github.com/soda-BOD/soda#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "electron": "^8.2.5"
+  }
 }
