--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "test",
-    "start": "electron . --no-sandbox"
+    "start": "electron ./src/main.js --no-sandbox"
   },
   "repository": {
     "type": "git",
