chor: (*) update package.json for vue.js

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/soda-BOD/soda#readme",
   "dependencies": {},
   "devDependencies": {
-    "electron": "^8.2.5"
+    "electron": "^8.2.5",
+    "vue": "^2.6.11"
   }
 }
