--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {},
   "devDependencies": {
     "electron": "^8.2.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "walk": "^2.3.14"
   }
 }
